app/styles/_splash.scss
body.splash {

  background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)) , url("../images/splash/splash0.jpg") no-repeat top center fixed;
  background-size: cover;
  transition: all .5s;
}

header#main-header{
  // position: fixed;
  background: $orange;
  text-align:center;
  margin: auto;
  position: fixed;
  width: 98%;
  z-index: 5000;
  opacity: 1;

  h1 {
    font-family: $primary-font;
  }

  h1.standard {
    display: none;
  }

  #header-box, #header-box-overlay {
    width: 80%;
    @include media($mobile-s) {

    }
    @include media($mobile-l) {

    }


    left: 10%;
    opacity: 1;
    z-index: 5000;
    background: transparent;
    margin: 10% 0 auto 0;
    position: absolute;
    padding: 0 0 10px 0;
    @media screen and (max-height: 600px ) and (min-width: 760px){
      margin-top: 0;
    }
  }
  #header-box-overlay {
    opacity: 1;
    z-index: 5001;
    background: transparent;

    h1.site-logo {
      color: $orange;

      @include media($mobile-s) {
        font-size: 5.0em;
        text-shadow: 1px 1px 0px $black;
        font-weight: 300;
        font-family: $primary-font;
      }
      @include media($mobile-m) {
        font-size: 7.0em;
      }
      @include media($mobile-l) {
        font-size: 9.0em;
        text-shadow: 2px 2px 0 $black;
      }
      @include media($desktop) {
        font-size: 10.0em;
      }



    }

    h2 {
      color: #eaeaea;
      @include media($mobile-s) {
        font-size: 1.1em;
        margin-top: -5px;
      }
      @include media($mobile-l) {
        font-size: 1.6em;
      }
      @include media($mobile-l) {
        font-size: 1.8em;
        margin-top: -35px;
      }
      @include media($desktop) {
        font-size: 2.4em;
      }
      font-family: $secondary-font;
      font-weight: 300;
      letter-spacing: 0.05em;

    }
    button {
      // @include button(shiny, $orange);
      @include not-as-shiny;
      @include media($mobile-s) {
        font-size: 1.1em;
      }
      @include media($mobile-l) {
        font-size: 1.5em;
      }
      width: 25%;
      max-width: 400px;
      min-width: 150px;
      padding: 10px 24px;
      background: transparent;
      text-align:center;
      border: 3px solid $darker-orange;
    }
    button:hover {
      background: $darker-orange;
      border-color: $white;
    }
    div#login, div#signup {
      @include media($mobile-s) {
        @include span-columns(12);
      }
      @include media($mobile-m) {
        @include span-columns(12);
      }
      @include media($mobile-l) {
        @include span-columns(12);
      }
      @include media($desktop) {
        @include span-columns(12);
      }

      // @include media($mobile-s) {
      //   // @include span-columns(3);
      //   // @include shift(1);
      // }
      position: absolute;

      z-index: 6000;

      .login-form, .signup-form,  {
        // @include media($mobile-s) {
        //   @include span-columns(5);
        // }
        // @include media($mobile-m) {
        //   @include span-columns(5);
        // }
        // @include media($mobile-l) {
        //   @include span-columns(12);
        // }
        // @include media($desktop) {
        //   @include span-columns(12);
        // }
        position: relative;

        @include media($mobile-s) {
          @include span-columns(9); @include shift(1.5);
          margin-top: 0;
          font-size: 0.8em;
        }
        @include media($mobile-m) {
          @include span-columns(6); @include shift(3);
          margin-top: 0;
          font-size: 0.8em;
        }
        @include media($mobile-l) {
          @include span-columns(3); @include shift(4.5);
          margin-top: 0;
          font-size: 0.9em;
        }
        @include media($desktop) {
          @include span-columns(3); @include shift(4.5);
          margin-top: 0;
          font-size: 1.0em;
        }

        input {
          display: block;
          clear: both;
          margin-bottom: 10px;
          padding: 5px 10px 5px 10px;
          letter-spacing: .4px;
          font-family: $secondary-font;
          font-weight: bold;
            ::-webkit-input-placeholder {
               color: $dark-gray;
            }

            :-moz-placeholder { /* Firefox 18- */
               color: $dark-gray;
            }

            ::-moz-placeholder {  /* Firefox 19+ */
               color: $dark-gray;
            }

            :-ms-input-placeholder {
               color: $dark-gray;
            }
          }
        button {
          // @include button(shiny, $orange);
          @include not-as-shiny;
          background:$darker-orange;
          color: $white;
          position:absolute;
          right: calc(50% - 60px);
          margin-top: 0;
        }
        .error {
          opacity: .7;
          color: $orange;
          background: $black;
          text-align:center;
        }
      }
    }

  }
}

div#main-container.splash{
  @include outer-container;
  max-width:none;
  width:100%;
  height: 100%;
  opacity: 1;


  position: absolute;
  @include media($mobile-s) { top: 0%; }
  @include media($mobile-m) { top: 0%; }
  @include media($mobile-l) { top: 0%; }
  @include media($desktop)  { top: 0%; }



  div#splash-img-container{
    position: relative;
  }

    #splash-img {
      width: 100%;
      position: relative;
      background-size:cover;
    }

    button#login {
      // @include button(shiny, $orange);
      @include not-as-shiny;
      background: $darker-orange;
      position: absolute;
      top: 5px;
      right: 5px;
      color:$white;
      width:120px;

    }
     p#splash-pet-name {
       position: absolute;
     top: 0;
       right: 10px;
      font-family: $secondary-font;
       opacity: .7;
     letter-spacing: .5px;
     }
  }

  nav#main-nav{
    @include media($mobile-s) {
      position: absolute;
      top: 0;
      right: calc(50% - 152px);
      margin: 0;
      padding: 0;
      z-index: 7000;
    }
    @include media($mobile-l) {
      position: absolute;
      top: 0;
      right: 2%;
    }
    a {
      text-decoration: none;
      display: inline-block;
      button {
        @include not-as-shiny;
        background: rgba($white, 0.5);
        border: 2px solid $darker-orange;
        color: rgba($black, 0.5);
        float: left;
        width:120px;
        margin: 5px 20px 0 0;
      }
      button:hover {
        background: $darker-orange;
        border-color: $white;
        color: $white;
      }
    }
  }

